parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLA
    COMILLITA
    ELIF
    ELSE
    IF
    LCORCH
    NEW
    OPERADORES
    PROMPT
    PUNTO
    RCORCH
    SET
    WHILE

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> variable sentencias
Rule 2     sentencias -> expresion sentencias
Rule 3     sentencias -> metodos sentencias
Rule 4     sentencias -> iteracion sentencias
Rule 5     sentencias -> objeto PUNTOYCOMA sentencias
Rule 6     sentencias -> empty
Rule 7     metodos -> imprimir PUNTOYCOMA
Rule 8     metodos -> condi_anidado
Rule 9     metodos -> metodo PUNTOYCOMA
Rule 10    variable -> VAR ID PUNTOYCOMA
Rule 11    variable -> VAR ID IGUAL expresion PUNTOYCOMA
Rule 12    variable -> VAR ID IGUAL condi_anidado PUNTOYCOMA
Rule 13    iteracion -> FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
Rule 14    imprimir -> CONSOLE METODO LPAREN expresion RPAREN
Rule 15    metodo -> ID METODO LPAREN RPAREN
Rule 16    metodo -> ID METODO LPAREN expresion RPAREN
Rule 17    metodo -> ID METODO LPAREN expresion COMA expresion RPAREN
Rule 18    metodo -> ID METODO
Rule 19    objeto -> VAR ID IGUAL LLLAVE RLLAVE
Rule 20    objeto -> VAR ID IGUAL LLLAVE keyvalue RLLAVE
Rule 21    keyvalue -> ID DOSPUNTOS factor COMA keyvalue
Rule 22    keyvalue -> ID DOSPUNTOS factor COMA
Rule 23    expresion -> expresion PLUS factor
Rule 24    expresion -> expresion MINUS term
Rule 25    expresion -> expresion TIMES term
Rule 26    expresion -> expresion DIVIDE term
Rule 27    expresion -> expresion POTENCIA term
Rule 28    expresion -> term
Rule 29    condi_anidado -> condicion AND condi_anidado
Rule 30    condi_anidado -> NOT condicion AND condi_anidado
Rule 31    condi_anidado -> condicion OR condi_anidado
Rule 32    condi_anidado -> NOT condicion OR condi_anidado
Rule 33    condi_anidado -> condicion
Rule 34    condi_anidado -> NOT condicion
Rule 35    condicion -> factor COMPARADOR factor
Rule 36    condicion -> factor IGUALA factor
Rule 37    condicion -> factor DIFERENTE factor
Rule 38    term -> factor
Rule 39    factor -> LPAREN expresion RPAREN
Rule 40    factor -> NUMBER
Rule 41    factor -> TEXTO
Rule 42    factor -> ID
Rule 43    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29 30
COMA                 : 17 21 22
COMILLA              : 
COMILLITA            : 
COMPARADOR           : 35
CONSOLE              : 14
DIFERENTE            : 37
DIVIDE               : 26
DOSPUNTOS            : 21 22
ELIF                 : 
ELSE                 : 
FOR                  : 13
ID                   : 10 11 12 13 13 15 16 17 18 19 20 21 22 42
IF                   : 
IGUAL                : 11 12 13 19 20
IGUALA               : 36
INDECREMENTAL        : 13
LCORCH               : 
LLLAVE               : 13 19 20
LPAREN               : 13 14 15 16 17 39
METODO               : 14 15 16 17 18
MINUS                : 24
NEW                  : 
NOT                  : 30 32 34
NUMBER               : 13 40
OPERADORES           : 
OR                   : 31 32
PLUS                 : 23
POTENCIA             : 27
PROMPT               : 
PUNTO                : 
PUNTOYCOMA           : 5 7 9 10 11 12 13 13
RCORCH               : 
RLLAVE               : 13 19 20
RPAREN               : 13 14 15 16 17 39
SET                  : 
TEXTO                : 41
TIMES                : 25
VAR                  : 10 11 12 19 20
WHILE                : 
error                : 

Nonterminals, with rules where they appear

condi_anidado        : 8 12 29 30 31 32
condicion            : 13 29 30 31 32 33 34
empty                : 6
expresion            : 2 11 14 16 17 17 23 24 25 26 27 39
factor               : 21 22 23 35 35 36 36 37 37 38
imprimir             : 7
iteracion            : 4
keyvalue             : 20 21
metodo               : 9
metodos              : 3
objeto               : 5
sentencias           : 1 2 3 4 5 13 0
term                 : 24 25 26 27 28
variable             : 1

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . variable sentencias
    (2) sentencias -> . expresion sentencias
    (3) sentencias -> . metodos sentencias
    (4) sentencias -> . iteracion sentencias
    (5) sentencias -> . objeto PUNTOYCOMA sentencias
    (6) sentencias -> . empty
    (10) variable -> . VAR ID PUNTOYCOMA
    (11) variable -> . VAR ID IGUAL expresion PUNTOYCOMA
    (12) variable -> . VAR ID IGUAL condi_anidado PUNTOYCOMA
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (7) metodos -> . imprimir PUNTOYCOMA
    (8) metodos -> . condi_anidado
    (9) metodos -> . metodo PUNTOYCOMA
    (13) iteracion -> . FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
    (19) objeto -> . VAR ID IGUAL LLLAVE RLLAVE
    (20) objeto -> . VAR ID IGUAL LLLAVE keyvalue RLLAVE
    (43) empty -> .
    (38) term -> . factor
    (14) imprimir -> . CONSOLE METODO LPAREN expresion RPAREN
    (29) condi_anidado -> . condicion AND condi_anidado
    (30) condi_anidado -> . NOT condicion AND condi_anidado
    (31) condi_anidado -> . condicion OR condi_anidado
    (32) condi_anidado -> . NOT condicion OR condi_anidado
    (33) condi_anidado -> . condicion
    (34) condi_anidado -> . NOT condicion
    (15) metodo -> . ID METODO LPAREN RPAREN
    (16) metodo -> . ID METODO LPAREN expresion RPAREN
    (17) metodo -> . ID METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> . ID METODO
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor

    VAR             shift and go to state 8
    FOR             shift and go to state 15
    $end            reduce using rule 43 (empty -> .)
    CONSOLE         shift and go to state 19
    NOT             shift and go to state 20
    ID              shift and go to state 9
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21

    sentencias                     shift and go to state 1
    variable                       shift and go to state 2
    expresion                      shift and go to state 3
    metodos                        shift and go to state 4
    iteracion                      shift and go to state 5
    objeto                         shift and go to state 6
    empty                          shift and go to state 7
    condi_anidado                  shift and go to state 10
    factor                         shift and go to state 11
    term                           shift and go to state 12
    imprimir                       shift and go to state 13
    metodo                         shift and go to state 14
    condicion                      shift and go to state 18

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> variable . sentencias
    (1) sentencias -> . variable sentencias
    (2) sentencias -> . expresion sentencias
    (3) sentencias -> . metodos sentencias
    (4) sentencias -> . iteracion sentencias
    (5) sentencias -> . objeto PUNTOYCOMA sentencias
    (6) sentencias -> . empty
    (10) variable -> . VAR ID PUNTOYCOMA
    (11) variable -> . VAR ID IGUAL expresion PUNTOYCOMA
    (12) variable -> . VAR ID IGUAL condi_anidado PUNTOYCOMA
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (7) metodos -> . imprimir PUNTOYCOMA
    (8) metodos -> . condi_anidado
    (9) metodos -> . metodo PUNTOYCOMA
    (13) iteracion -> . FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
    (19) objeto -> . VAR ID IGUAL LLLAVE RLLAVE
    (20) objeto -> . VAR ID IGUAL LLLAVE keyvalue RLLAVE
    (43) empty -> .
    (38) term -> . factor
    (14) imprimir -> . CONSOLE METODO LPAREN expresion RPAREN
    (29) condi_anidado -> . condicion AND condi_anidado
    (30) condi_anidado -> . NOT condicion AND condi_anidado
    (31) condi_anidado -> . condicion OR condi_anidado
    (32) condi_anidado -> . NOT condicion OR condi_anidado
    (33) condi_anidado -> . condicion
    (34) condi_anidado -> . NOT condicion
    (15) metodo -> . ID METODO LPAREN RPAREN
    (16) metodo -> . ID METODO LPAREN expresion RPAREN
    (17) metodo -> . ID METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> . ID METODO
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor

    VAR             shift and go to state 8
    FOR             shift and go to state 15
    $end            reduce using rule 43 (empty -> .)
    RLLAVE          reduce using rule 43 (empty -> .)
    CONSOLE         shift and go to state 19
    NOT             shift and go to state 20
    ID              shift and go to state 9
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21

    variable                       shift and go to state 2
    sentencias                     shift and go to state 22
    expresion                      shift and go to state 3
    metodos                        shift and go to state 4
    iteracion                      shift and go to state 5
    objeto                         shift and go to state 6
    empty                          shift and go to state 7
    condi_anidado                  shift and go to state 10
    factor                         shift and go to state 11
    term                           shift and go to state 12
    imprimir                       shift and go to state 13
    metodo                         shift and go to state 14
    condicion                      shift and go to state 18

state 3

    (2) sentencias -> expresion . sentencias
    (23) expresion -> expresion . PLUS factor
    (24) expresion -> expresion . MINUS term
    (25) expresion -> expresion . TIMES term
    (26) expresion -> expresion . DIVIDE term
    (27) expresion -> expresion . POTENCIA term
    (1) sentencias -> . variable sentencias
    (2) sentencias -> . expresion sentencias
    (3) sentencias -> . metodos sentencias
    (4) sentencias -> . iteracion sentencias
    (5) sentencias -> . objeto PUNTOYCOMA sentencias
    (6) sentencias -> . empty
    (10) variable -> . VAR ID PUNTOYCOMA
    (11) variable -> . VAR ID IGUAL expresion PUNTOYCOMA
    (12) variable -> . VAR ID IGUAL condi_anidado PUNTOYCOMA
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (7) metodos -> . imprimir PUNTOYCOMA
    (8) metodos -> . condi_anidado
    (9) metodos -> . metodo PUNTOYCOMA
    (13) iteracion -> . FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
    (19) objeto -> . VAR ID IGUAL LLLAVE RLLAVE
    (20) objeto -> . VAR ID IGUAL LLLAVE keyvalue RLLAVE
    (43) empty -> .
    (38) term -> . factor
    (14) imprimir -> . CONSOLE METODO LPAREN expresion RPAREN
    (29) condi_anidado -> . condicion AND condi_anidado
    (30) condi_anidado -> . NOT condicion AND condi_anidado
    (31) condi_anidado -> . condicion OR condi_anidado
    (32) condi_anidado -> . NOT condicion OR condi_anidado
    (33) condi_anidado -> . condicion
    (34) condi_anidado -> . NOT condicion
    (15) metodo -> . ID METODO LPAREN RPAREN
    (16) metodo -> . ID METODO LPAREN expresion RPAREN
    (17) metodo -> . ID METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> . ID METODO
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor

    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    POTENCIA        shift and go to state 28
    VAR             shift and go to state 8
    FOR             shift and go to state 15
    $end            reduce using rule 43 (empty -> .)
    RLLAVE          reduce using rule 43 (empty -> .)
    CONSOLE         shift and go to state 19
    NOT             shift and go to state 20
    ID              shift and go to state 9
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21

    expresion                      shift and go to state 3
    sentencias                     shift and go to state 23
    factor                         shift and go to state 11
    term                           shift and go to state 12
    variable                       shift and go to state 2
    metodos                        shift and go to state 4
    iteracion                      shift and go to state 5
    objeto                         shift and go to state 6
    empty                          shift and go to state 7
    condi_anidado                  shift and go to state 10
    imprimir                       shift and go to state 13
    metodo                         shift and go to state 14
    condicion                      shift and go to state 18

state 4

    (3) sentencias -> metodos . sentencias
    (1) sentencias -> . variable sentencias
    (2) sentencias -> . expresion sentencias
    (3) sentencias -> . metodos sentencias
    (4) sentencias -> . iteracion sentencias
    (5) sentencias -> . objeto PUNTOYCOMA sentencias
    (6) sentencias -> . empty
    (10) variable -> . VAR ID PUNTOYCOMA
    (11) variable -> . VAR ID IGUAL expresion PUNTOYCOMA
    (12) variable -> . VAR ID IGUAL condi_anidado PUNTOYCOMA
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (7) metodos -> . imprimir PUNTOYCOMA
    (8) metodos -> . condi_anidado
    (9) metodos -> . metodo PUNTOYCOMA
    (13) iteracion -> . FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
    (19) objeto -> . VAR ID IGUAL LLLAVE RLLAVE
    (20) objeto -> . VAR ID IGUAL LLLAVE keyvalue RLLAVE
    (43) empty -> .
    (38) term -> . factor
    (14) imprimir -> . CONSOLE METODO LPAREN expresion RPAREN
    (29) condi_anidado -> . condicion AND condi_anidado
    (30) condi_anidado -> . NOT condicion AND condi_anidado
    (31) condi_anidado -> . condicion OR condi_anidado
    (32) condi_anidado -> . NOT condicion OR condi_anidado
    (33) condi_anidado -> . condicion
    (34) condi_anidado -> . NOT condicion
    (15) metodo -> . ID METODO LPAREN RPAREN
    (16) metodo -> . ID METODO LPAREN expresion RPAREN
    (17) metodo -> . ID METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> . ID METODO
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor

    VAR             shift and go to state 8
    FOR             shift and go to state 15
    $end            reduce using rule 43 (empty -> .)
    RLLAVE          reduce using rule 43 (empty -> .)
    CONSOLE         shift and go to state 19
    NOT             shift and go to state 20
    ID              shift and go to state 9
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21

    metodos                        shift and go to state 4
    sentencias                     shift and go to state 29
    variable                       shift and go to state 2
    expresion                      shift and go to state 3
    iteracion                      shift and go to state 5
    objeto                         shift and go to state 6
    empty                          shift and go to state 7
    condi_anidado                  shift and go to state 10
    factor                         shift and go to state 11
    term                           shift and go to state 12
    imprimir                       shift and go to state 13
    metodo                         shift and go to state 14
    condicion                      shift and go to state 18

state 5

    (4) sentencias -> iteracion . sentencias
    (1) sentencias -> . variable sentencias
    (2) sentencias -> . expresion sentencias
    (3) sentencias -> . metodos sentencias
    (4) sentencias -> . iteracion sentencias
    (5) sentencias -> . objeto PUNTOYCOMA sentencias
    (6) sentencias -> . empty
    (10) variable -> . VAR ID PUNTOYCOMA
    (11) variable -> . VAR ID IGUAL expresion PUNTOYCOMA
    (12) variable -> . VAR ID IGUAL condi_anidado PUNTOYCOMA
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (7) metodos -> . imprimir PUNTOYCOMA
    (8) metodos -> . condi_anidado
    (9) metodos -> . metodo PUNTOYCOMA
    (13) iteracion -> . FOR LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE
    (19) objeto -> . VAR ID IGUAL LLLAVE RLLAVE
    (20) objeto -> . VAR ID IGUAL LLLAVE keyvalue RLLAVE
    (43) empty -> .
    (38) term -> . factor
    (14) imprimir -> . CONSOLE METODO LPAREN expresion RPAREN
    (29) condi_anidado -> . condicion AND condi_anidado
    (30) condi_anidado -> . NOT condicion AND condi_anidado
    (31) condi_anidado -> . condicion OR condi_anidado
    (32) condi_anidado -> . NOT condicion OR condi_anidado
    (33) condi_anidado -> . condicion
    (34) condi_anidado -> . NOT condicion
    (15) metodo -> . ID METODO LPAREN RPAREN
    (16) metodo -> . ID METODO LPAREN expresion RPAREN
    (17) metodo -> . ID METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> . ID METODO
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor

    VAR             shift and go to state 8
    FOR             shift and go to state 15
    $end            reduce using rule 43 (empty -> .)
    RLLAVE          reduce using rule 43 (empty -> .)
    CONSOLE         shift and go to state 19
    NOT             shift and go to state 20
    ID              shift and go to state 9
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21

    iteracion                      shift and go to state 5
    sentencias                     shift and go to state 30
    variable                       shift and go to state 2
    expresion                      shift and go to state 3
    metodos                        shift and go to state 4
    objeto                         shift and go to state 6
    empty                          shift and go to state 7
    condi_anidado                  shift and go to state 10
    factor                         shift and go to state 11
    term                           shift and go to state 12
    imprimir                       shift and go to state 13
    metodo                         shift and go to state 14
    condicion                      shift and go to state 18

state 6

    (5) sentencias -> objeto . PUNTOYCOMA sentencias

    PUNTOYCOMA      shift and go to state 31


state 7

    (6) sentencias -> empty .

    $end            reduce using rule 6 (sentencias -> empty .)
    RLLAVE          reduce using rule 6 (sentencias -> empty .)


state 8

    (10) variable -> VAR . ID PUNTOYCOMA
    (11) variable -> VAR . ID IGUAL expresion PUNTOYCOMA
    (12) variable -> VAR . ID IGUAL condi_anidado PUNTOYCOMA
    (19) objeto -> VAR . ID IGUAL LLLAVE RLLAVE
    (20) objeto -> VAR . ID IGUAL LLLAVE keyvalue RLLAVE

    ID              shift and go to state 32


state 9

    (15) metodo -> ID . METODO LPAREN RPAREN
    (16) metodo -> ID . METODO LPAREN expresion RPAREN
    (17) metodo -> ID . METODO LPAREN expresion COMA expresion RPAREN
    (18) metodo -> ID . METODO
    (42) factor -> ID .

    METODO          shift and go to state 33
    COMPARADOR      reduce using rule 42 (factor -> ID .)
    IGUALA          reduce using rule 42 (factor -> ID .)
    DIFERENTE       reduce using rule 42 (factor -> ID .)
    PLUS            reduce using rule 42 (factor -> ID .)
    MINUS           reduce using rule 42 (factor -> ID .)
    TIMES           reduce using rule 42 (factor -> ID .)
    DIVIDE          reduce using rule 42 (factor -> ID .)
    POTENCIA        reduce using rule 42 (factor -> ID .)
    VAR             reduce using rule 42 (factor -> ID .)
    FOR             reduce using rule 42 (factor -> ID .)
    CONSOLE         reduce using rule 42 (factor -> ID .)
    NOT             reduce using rule 42 (factor -> ID .)
    ID              reduce using rule 42 (factor -> ID .)
    LPAREN          reduce using rule 42 (factor -> ID .)
    NUMBER          reduce using rule 42 (factor -> ID .)
    TEXTO           reduce using rule 42 (factor -> ID .)
    $end            reduce using rule 42 (factor -> ID .)
    RLLAVE          reduce using rule 42 (factor -> ID .)


state 10

    (8) metodos -> condi_anidado .

    VAR             reduce using rule 8 (metodos -> condi_anidado .)
    FOR             reduce using rule 8 (metodos -> condi_anidado .)
    CONSOLE         reduce using rule 8 (metodos -> condi_anidado .)
    NOT             reduce using rule 8 (metodos -> condi_anidado .)
    ID              reduce using rule 8 (metodos -> condi_anidado .)
    LPAREN          reduce using rule 8 (metodos -> condi_anidado .)
    NUMBER          reduce using rule 8 (metodos -> condi_anidado .)
    TEXTO           reduce using rule 8 (metodos -> condi_anidado .)
    $end            reduce using rule 8 (metodos -> condi_anidado .)
    RLLAVE          reduce using rule 8 (metodos -> condi_anidado .)


state 11

    (38) term -> factor .
    (35) condicion -> factor . COMPARADOR factor
    (36) condicion -> factor . IGUALA factor
    (37) condicion -> factor . DIFERENTE factor

    PLUS            reduce using rule 38 (term -> factor .)
    MINUS           reduce using rule 38 (term -> factor .)
    TIMES           reduce using rule 38 (term -> factor .)
    DIVIDE          reduce using rule 38 (term -> factor .)
    POTENCIA        reduce using rule 38 (term -> factor .)
    VAR             reduce using rule 38 (term -> factor .)
    FOR             reduce using rule 38 (term -> factor .)
    CONSOLE         reduce using rule 38 (term -> factor .)
    NOT             reduce using rule 38 (term -> factor .)
    ID              reduce using rule 38 (term -> factor .)
    LPAREN          reduce using rule 38 (term -> factor .)
    NUMBER          reduce using rule 38 (term -> factor .)
    TEXTO           reduce using rule 38 (term -> factor .)
    $end            reduce using rule 38 (term -> factor .)
    RLLAVE          reduce using rule 38 (term -> factor .)
    PUNTOYCOMA      reduce using rule 38 (term -> factor .)
    COMPARADOR      shift and go to state 34
    IGUALA          shift and go to state 35
    DIFERENTE       shift and go to state 36


state 12

    (28) expresion -> term .

    PLUS            reduce using rule 28 (expresion -> term .)
    MINUS           reduce using rule 28 (expresion -> term .)
    TIMES           reduce using rule 28 (expresion -> term .)
    DIVIDE          reduce using rule 28 (expresion -> term .)
    POTENCIA        reduce using rule 28 (expresion -> term .)
    VAR             reduce using rule 28 (expresion -> term .)
    FOR             reduce using rule 28 (expresion -> term .)
    CONSOLE         reduce using rule 28 (expresion -> term .)
    NOT             reduce using rule 28 (expresion -> term .)
    ID              reduce using rule 28 (expresion -> term .)
    LPAREN          reduce using rule 28 (expresion -> term .)
    NUMBER          reduce using rule 28 (expresion -> term .)
    TEXTO           reduce using rule 28 (expresion -> term .)
    $end            reduce using rule 28 (expresion -> term .)
    RLLAVE          reduce using rule 28 (expresion -> term .)
    RPAREN          reduce using rule 28 (expresion -> term .)
    PUNTOYCOMA      reduce using rule 28 (expresion -> term .)
    COMA            reduce using rule 28 (expresion -> term .)


state 13

    (7) metodos -> imprimir . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 37


state 14

    (9) metodos -> metodo . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 38


state 15

    (13) iteracion -> FOR . LPAREN ID IGUAL NUMBER PUNTOYCOMA condicion PUNTOYCOMA ID INDECREMENTAL RPAREN LLLAVE sentencias RLLAVE

    LPAREN          shift and go to state 39


state 16

    (39) factor -> LPAREN . expresion RPAREN
    (23) expresion -> . expresion PLUS factor
    (24) expresion -> . expresion MINUS term
    (25) expresion -> . expresion TIMES term
    (26) expresion -> . expresion DIVIDE term
    (27) expresion -> . expresion POTENCIA term
    (28) expresion -> . term
    (38) term -> . factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21
    ID              shift and go to state 42

    expresion                      shift and go to state 40
    factor                         shift and go to state 41
    term                           shift and go to state 12

state 17

    (40) factor -> NUMBER .

    COMPARADOR      reduce using rule 40 (factor -> NUMBER .)
    IGUALA          reduce using rule 40 (factor -> NUMBER .)
    DIFERENTE       reduce using rule 40 (factor -> NUMBER .)
    PLUS            reduce using rule 40 (factor -> NUMBER .)
    MINUS           reduce using rule 40 (factor -> NUMBER .)
    TIMES           reduce using rule 40 (factor -> NUMBER .)
    DIVIDE          reduce using rule 40 (factor -> NUMBER .)
    POTENCIA        reduce using rule 40 (factor -> NUMBER .)
    VAR             reduce using rule 40 (factor -> NUMBER .)
    FOR             reduce using rule 40 (factor -> NUMBER .)
    CONSOLE         reduce using rule 40 (factor -> NUMBER .)
    NOT             reduce using rule 40 (factor -> NUMBER .)
    ID              reduce using rule 40 (factor -> NUMBER .)
    LPAREN          reduce using rule 40 (factor -> NUMBER .)
    NUMBER          reduce using rule 40 (factor -> NUMBER .)
    TEXTO           reduce using rule 40 (factor -> NUMBER .)
    $end            reduce using rule 40 (factor -> NUMBER .)
    RLLAVE          reduce using rule 40 (factor -> NUMBER .)
    RPAREN          reduce using rule 40 (factor -> NUMBER .)
    PUNTOYCOMA      reduce using rule 40 (factor -> NUMBER .)
    COMA            reduce using rule 40 (factor -> NUMBER .)
    AND             reduce using rule 40 (factor -> NUMBER .)
    OR              reduce using rule 40 (factor -> NUMBER .)


state 18

    (29) condi_anidado -> condicion . AND condi_anidado
    (31) condi_anidado -> condicion . OR condi_anidado
    (33) condi_anidado -> condicion .

    AND             shift and go to state 43
    OR              shift and go to state 44
    VAR             reduce using rule 33 (condi_anidado -> condicion .)
    FOR             reduce using rule 33 (condi_anidado -> condicion .)
    CONSOLE         reduce using rule 33 (condi_anidado -> condicion .)
    NOT             reduce using rule 33 (condi_anidado -> condicion .)
    ID              reduce using rule 33 (condi_anidado -> condicion .)
    LPAREN          reduce using rule 33 (condi_anidado -> condicion .)
    NUMBER          reduce using rule 33 (condi_anidado -> condicion .)
    TEXTO           reduce using rule 33 (condi_anidado -> condicion .)
    $end            reduce using rule 33 (condi_anidado -> condicion .)
    RLLAVE          reduce using rule 33 (condi_anidado -> condicion .)
    PUNTOYCOMA      reduce using rule 33 (condi_anidado -> condicion .)


state 19

    (14) imprimir -> CONSOLE . METODO LPAREN expresion RPAREN

    METODO          shift and go to state 45


state 20

    (30) condi_anidado -> NOT . condicion AND condi_anidado
    (32) condi_anidado -> NOT . condicion OR condi_anidado
    (34) condi_anidado -> NOT . condicion
    (35) condicion -> . factor COMPARADOR factor
    (36) condicion -> . factor IGUALA factor
    (37) condicion -> . factor DIFERENTE factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21
    ID              shift and go to state 42

    condicion                      shift and go to state 46
    factor                         shift and go to state 47

state 21

    (41) factor -> TEXTO .

    COMPARADOR      reduce using rule 41 (factor -> TEXTO .)
    IGUALA          reduce using rule 41 (factor -> TEXTO .)
    DIFERENTE       reduce using rule 41 (factor -> TEXTO .)
    PLUS            reduce using rule 41 (factor -> TEXTO .)
    MINUS           reduce using rule 41 (factor -> TEXTO .)
    TIMES           reduce using rule 41 (factor -> TEXTO .)
    DIVIDE          reduce using rule 41 (factor -> TEXTO .)
    POTENCIA        reduce using rule 41 (factor -> TEXTO .)
    VAR             reduce using rule 41 (factor -> TEXTO .)
    FOR             reduce using rule 41 (factor -> TEXTO .)
    CONSOLE         reduce using rule 41 (factor -> TEXTO .)
    NOT             reduce using rule 41 (factor -> TEXTO .)
    ID              reduce using rule 41 (factor -> TEXTO .)
    LPAREN          reduce using rule 41 (factor -> TEXTO .)
    NUMBER          reduce using rule 41 (factor -> TEXTO .)
    TEXTO           reduce using rule 41 (factor -> TEXTO .)
    $end            reduce using rule 41 (factor -> TEXTO .)
    RLLAVE          reduce using rule 41 (factor -> TEXTO .)
    RPAREN          reduce using rule 41 (factor -> TEXTO .)
    PUNTOYCOMA      reduce using rule 41 (factor -> TEXTO .)
    COMA            reduce using rule 41 (factor -> TEXTO .)
    AND             reduce using rule 41 (factor -> TEXTO .)
    OR              reduce using rule 41 (factor -> TEXTO .)


state 22

    (1) sentencias -> variable sentencias .

    $end            reduce using rule 1 (sentencias -> variable sentencias .)
    RLLAVE          reduce using rule 1 (sentencias -> variable sentencias .)


state 23

    (2) sentencias -> expresion sentencias .

    $end            reduce using rule 2 (sentencias -> expresion sentencias .)
    RLLAVE          reduce using rule 2 (sentencias -> expresion sentencias .)


state 24

    (23) expresion -> expresion PLUS . factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21
    ID              shift and go to state 42

    factor                         shift and go to state 48

state 25

    (24) expresion -> expresion MINUS . term
    (38) term -> . factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21
    ID              shift and go to state 42

    term                           shift and go to state 49
    factor                         shift and go to state 41

state 26

    (25) expresion -> expresion TIMES . term
    (38) term -> . factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID

    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    TEXTO           shift and go to state 21
    ID              shift and go to state 42

    term                           shift and go to state 50
    factor                         shift and go to state 41

state 27

    (26) expresion -> expresion DIVIDE . term
    (38) term -> . factor
    (39) factor -> . LPAREN expresion RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . TEXTO
    (42) factor -> . ID
